--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.7.1",
+    "typeorm": "^0.2.37"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
