--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,11 @@
     "dev": "tsnd --transpile-only --ignore-watch node_modules --respawn src/app.ts",
     "start": "ts-node src/app.ts",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/ormconfig.ts",
+    "migration": "yarn typeorm migration:run",
+    "migration:create": "yarn typeorm migration:create -n",
+    "migration:revert": "yarn typeorm migration:revert"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -29,6 +33,7 @@
     "prettier": "^2.3.2",
     "ts-node": "3.3.0",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "3.1.6"
   }
 }
