no content and is loading components

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -23,7 +23,8 @@
     "prettier/prettier": [
       1,
       {
-        "singleQuote": false
+        "singleQuote": false,
+        "endOfLine": "auto"
       }
     ],
     "import/extensions": [
