--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
+    "react-spring": "^9.2.4",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
