--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-loading-overlay": "^1.0.0",
+    "@types/react-select": "^4.0.17",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,9 +20,11 @@
     "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "react-spring": "^9.2.4",
     "styled-components": "^5.3.1",
+    "sweetalert2": "^11.1.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
