--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@types/react-loading-overlay": "^1.0.0",
     "@types/react-select": "^4.0.17",
     "axios": "^0.21.1",
+    "faker": "^5.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/faker": "^5.5.8",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.13",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
